k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ci-cd-app
  template:
    metadata:
      labels:
        app: ci-cd-app
    spec:
      containers:
        - name: ci-cd-app
          image: ci-cd-app:latest
          ports:
            - containerPort: 3000
