k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ci-cd-app
spec:
  selector:
    app: ci-cd-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
